added swagger for all workspaces
